sidecar.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-log-demo
spec:
  volumes:
    - name: shared-logs
      emptyDir: {}

  containers:
    - name: log-generator
      image: busybox:latest
      command: ["/bin/sh", "-c"]
      args:
        - "while true; do echo \"$(date) - Log entry from primary container\" >> /var/log/app.log; sleep 5; done"
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log

    - name: log-sidecar-nginx
      image: nginx:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - name: shared-logs
          mountPath: /usr/share/nginx/html/logs
